# gonzago-design-tools

./: .editorconfig  .gitattributes  .gitignore  LICENSE  README.md  TODO.md  pyproject.toml
gonzago/: __init__.py  __main__.py  config.py  file_system.py  images.py  main.py  palettes.py  palettes.schema.yaml  videos.py
src/gonzago/: __init__.py  __main__.py  cli.py  colornames.bestof.csv  colors.py  file_system.py  godot-3-dark.palette.yaml  godot-3-light.palette.yaml  godot-4-dark.palette.yaml  godot-4.pal.yaml  math.py  palette_template.txt  palettes.py  paths.py  schema.pal.yaml  test.pal.yaml
src/gonzago/colors/: __init__.py  colornames.csv  data.py
src/gonzago/core/: config.py  paths.py
src/gonzago/images/: __init__.py
src/gonzago/p/: __init__.py  palettes.schema.yaml  templates.py
src/gonzago/palettes/: __init__.py  abc.py  exporters.py  io.py  palette.py  palettes.schema.yaml  templates.py
src/gonzago/palettes/exporters/: __init__.py  ase.py  gimp.py  hex.py  jasc.py  paint_net.py  png.py
src/gonzago/palettes/formats/: __init__,py  ase.py  paint_net.py  yaml.py
src/gonzago/palettes/io/: __init__,py  gimp.py  hex.py  image.py  jasc.py  paint_net.py  yaml.py
src/gonzago/utils/: colors.py
src/gonzago/videos/: __init__.py
tests/: .gitignore  test.pal.yaml  test_colors.py  test_images.py  test_math.py  test_palettes.py
tests/data/: test.pal.yaml
tests/data/palettes/: godot-3.yaml  godot-4.yaml  gonzago.yaml
