[tool.poetry]
name = "gonzago"
version = "0.0.1"
description = "Automation and tooling for Gonzago Framework design elements."
authors = [
  "David Krummenacher and Gonzago Framework contributors "
]
license = "MIT"
readme = "README.md"
repository = "https://github.com/godot-gonzago/gonzago-design-tools"
documentation = "https://github.com/godot-gonzago/gonzago-design-tools/wiki"
classifiers = [
  "Development Status :: 1 - Planning",
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Utilities",
  "Topic :: Multimedia :: Graphics :: Graphics Conversion",
  "Topic :: Multimedia :: Sound/Audio :: Conversion",
  "Topic :: Multimedia :: Video :: Conversion",
  "Topic :: Text Processing"
]
packages = [
  { include = "gonzago", from = "src" }
]

[tool.poetry.urls]
"Issue Tracker" = "https://github.com/godot-gonzago/gonzago-design-tools/issues"

[tool.poetry.dependencies]
python = "^3.10"
tomlkit = "^0.11.7"
PyYAML = "^6.0"
jsonschema = "^4.17.3"
Pillow = "^9.3.0"
scour = "^0.38.2"
cairosvg = "^2.7.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-cov = "*"
pytest-mock = "*"

[tool.poetry.group.dev.dependencies.black]
version = "^23.1a1"
allow-prereleases = true

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = "^5.3.0"
furo = "^2022.12.7"

[tool.poetry.scripts]
gonzago = 'gonzago.__main__:main'

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = [
  "poetry-core"
]
build-backend = "poetry.core.masonry.api"
