[tool.poetry]
name = "Gonzago Design Tools"
version = "0.0.1"
description = "Automation and tooling for Gonzago Framework design elements."
authors = [
  "David Krummenacher and Gonzago Framework contributors "
]
license = "MIT"
readme = "README.md"
repository = "https://github.com/godot-gonzago/gonzago-design-tools"
documentation = "https://github.com/godot-gonzago/gonzago-design-tools/wiki"
packages = [
  { include = "gonzago" }
]
include = [
  "gonzago/palettes.schema.yaml"
]

[tool.poetry.urls]
"Issue Tracker" = "https://github.com/godot-gonzago/gonzago-design-tools/issues"

[tool.poetry.dependencies]
python = "^3.10"
typer = {extras = ["all"], version = "^0.9.0"}
tomlkit = "^0.11.7"
PyYAML = "^6.0"
jsonschema = "^4.17.3"
Pillow = "^9.3.0"
scour = "^0.38.2"
cairosvg = "^2.7.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"

[tool.poetry.scripts]
gonzago = 'gonzago.main:app'

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = [
  "poetry-core"
]
build-backend = "poetry.core.masonry.api"
